Resume match redesign

--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,8 @@
     -->
     <title>Alex Jewell</title>
 
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <style type="text/css"> body { margin: 0; } </style>
   </head>
   <body>
