--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,18 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta name="theme-color" content="#50E3C2" />
+    <meta name="description" content="Alex Jewell: Socially-driven senior UI software engineer. Artesian foodporn director and social media marketing expert at @bestfoodalex. Blockchain and decentralization consultant and activist. Leftist technocratic ghostwriter for political organizations and lobbyists, global economics watchdog groups, biotech advocacy, and liberal media." />
+    <meta name="keywords" content="alex jewell, alex jewel, chicago frontend developer, chicago frontend software engineer, south loop chicago software engineer, bestfoodalex, best food alex, chicago food director, chicago instagram, chicago social media, chicago blockchain, blockchain developer, chicago react developer, chicago reactjs" />
+    <meta property="og:title" content="Alex Jewell (alexjewell.com)" />
+    <meta property="og:url" content="http://alexjewell.com" />
+    <meta property="og:image" content="%PUBLIC_URL%/logo.png" />
+    <meta property="og:site_name" content="Alex Jewell" />
+    <meta property="og:description" content="Socially-driven senior UI software engineer. Artesian foodporn director and social media marketing expert at @bestfoodalex. Blockchain and decentralization consultant and activist. Leftist technocratic ghostwriter for political organizations and lobbyists, global economics watchdog groups, biotech advocacy, and liberal media." />
+    <meta property="og:type" content="website" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
